# Engine

./: .gitignore  CMakeLists.txt  README.md  cppan.yml  sw.cpp
.github/workflows/: sw.yml
cmake/: BuildFunctions.cmake
include/Polygon4/: API.h  API_functions.h  Actions.h  BuildingMenu.h  Common.h  Configuration.h  ConfigurationWeapon.h  Engine.h  Exception.h  Glider.h  Hotpatch.h  Map.h  MapBuilding.h  Mechanoid.h  Memory.h  Modification.h  Mods.h  Settings.h  String.h  Test.h  UnrealTypes.h  dll.h
src/: API.cpp  API.i  Actions.cpp  BuildingMenu.cpp  CMakeLists.txt  Common.h  Configuration.cpp  ConfigurationWeapon.cpp  Db.cpp  Db.h  DbObject.cpp  DbObject.h  Engine.cpp  Executor.cpp  Executor.h  Game.cpp  Game.h  Glider.cpp  Map.cpp  MapBuilding.cpp  Mechanoid.cpp  Memory.cpp  Modification.cpp  Mods.cpp  Object.cpp  Object.h  Script.cpp  Script.h  ScriptAPI.cpp  ScriptAPI.h  ScriptAPI.i  ScriptLua.cpp  ScriptLua.h  Sector.cpp  Sector.h  Settings.cpp  Test.cpp
src/engine/: Engine.cpp  Mods.cpp
src/test/: main.cpp
src/tools/: FixProject.cpp  Hotpatch.cpp  Hotpatch.h  Injector.cpp  Logger.cpp  Logger.h  Memory.cpp  PdbFix.cpp  prepare_sw_info.cpp
tools/: cmake_win64.bat
